--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "amazon-cognito-identity-js": "^5.2.0",
+    "antd": "^4.16.13",
     "isomorphic-fetch": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,7 +43,10 @@
     ]
   },
   "standard": {
-    "globals": ["test", "expect"],
+    "globals": [
+      "test",
+      "expect"
+    ],
     "parser": "babel-eslint"
   }
 }
